# mouseion

./: .gitignore  CMakeLists.txt
cmake_macros_and_functions/: enable_compile_warnings.cmake  enable_mouseion_compile_warnings.cmake  mouseion_library.cmake  (+4 more)
sources/communicator/: CMakeLists.txt
sources/communicator/cmake_macros_and_functions/: communicator.cmake  communicator_build_prerequisites.cmake
sources/communicator/header_files/: Communicator.h  CommunicatorEmbryo.h  CommunicatorFactory.h  CommunicatorRank.h  CommunicatorSize.h  EnabledMPIEnvironment.h  ErrorInvalidMPIEnvironmentChange.h  MPIBroadcast.h  MPICommunicator.h  MPIEnvironment.h  MPIEnvironmentState.h  MasterProcess.h  NullMPIEnvironment.h  TaskStatus.h  create_communicator_embryo.hpp  create_communicator_rank_tag.hpp  create_communicator_size_tag.hpp  create_master_process_tag.hpp  create_rectangular_communicator.h  is_communicator_type.hpp
sources/communicator/implementation_files/: Communicator.cpp  CommunicatorEmbryo.cpp  CommunicatorFactory.cpp  CommunicatorRank.cpp  CommunicatorSize.cpp  DisabledMPIEnvironment.cpp  EnabledMPIEnvironment.cpp  ErrorInvalidMPIEnvironmentChange.cpp  MPIBroadcast.cpp  MPICommunicator.cpp  MPICommunicatorFactory.cpp  MPIEnvironment.cpp  MPIEnvironmentState.cpp  MasterProcess.cpp  NullMPIEnvironment.cpp  TaskStatus.cpp  create_communicator_embryo.cpp  create_communicator_rank_tag.cpp  create_communicator_size_tag.cpp  create_master_process_tag.cpp  create_rectangular_communicator.cpp  is_communicator_type.cpp
sources/communicator/unit_tests/: CMakeLists.txt
sources/communicator/unit_tests/header_files/: test_communicator.h  test_mpi_communicator.h
sources/communicator/unit_tests/implementation_files/: test_communicator.cpp  test_mpi_communicator.cpp
sources/debugging_utilities/: CMakeLists.txt
sources/debugging_utilities/cmake_macros_and_functions/: debugging_utilities.cmake  debugging_utilities_build_prerequisites.cmake
sources/debugging_utilities/header_files/: AssertMessage.h  AssertValidValueForType.hpp  BaseException.h  GenericErrorClass.hpp
sources/debugging_utilities/implementation_files/: AssertValidValueForType.cpp  BaseException.cpp  GenericErrorClass.cpp
sources/meta_programming_library/: CMakeLists.txt
sources/meta_programming_library/cmake_macros_and_functions/: mpl.cmake  mpl_build_prerequisites.cmake
sources/meta_programming_library/generic_abstract_factory/: CMakeLists.txt
sources/meta_programming_library/generic_abstract_factory/cmake_macros_and_functions/: generic_abstract_factory.cmake  generic_abstract_factory_build_prerequisites.cmake
sources/meta_programming_library/generic_abstract_factory/header_files/: AbstractFactory.hpp  AbstractFactoryUnit.hpp  AbstractFactoryUtilities.hpp  Command.hpp  OpNewFactoryUnit.hpp
sources/meta_programming_library/generic_abstract_factory/implementation_files/: AbstractFactoryUtilities.cpp  Command.cpp
sources/meta_programming_library/generic_class_generation/: CMakeLists.txt
sources/meta_programming_library/generic_class_generation/cmake_macros_and_functions/: generic_class_generation.cmake  generic_class_generation_build_prerequisites.cmake
sources/meta_programming_library/generic_class_generation/header_files/: GenerateScatteredHierarchy.hpp
sources/meta_programming_library/generic_foreach_loop/: CMakeLists.txt
sources/meta_programming_library/generic_foreach_loop/cmake_macros_and_functions/: foreach_loop.cmake  foreach_loop_build_prerequisites.cmake  generic_foreach_loop.cmake  generic_foreach_loop_build_prerequisites.cmake
sources/meta_programming_library/generic_foreach_loop/header_files/: ForLoop.hpp
sources/meta_programming_library/generic_foreach_loop/implementation_files/: ForLoop.cpp
sources/meta_programming_library/generic_object_factory/: CMakeLists.txt
sources/meta_programming_library/generic_object_factory/cmake_macros_and_functions/: generic_object_factory.cmake  generic_object_factory_build_prerequisites.cmake
sources/meta_programming_library/generic_object_factory/header_files/: DefaultFactoryError.hpp  Factory.hpp  RegisterObjectFactories.hpp
sources/meta_programming_library/generic_visitor/: CMakeLists.txt
sources/meta_programming_library/generic_visitor/cmake_macros_and_functions/: generic_visitor.cmake  generic_visitor_build_prerequisites.cmake
sources/meta_programming_library/generic_visitor/header_files/: BaseVisitable.hpp  DefaultCatchAll.hpp  DefineVisitableMacro.h  Visitor.hpp
sources/meta_programming_library/generic_visitor/implementation_files/: BaseVisitor.cpp  DefineVisitableMacro.cpp  ErrorUnknownVisitor.cpp
sources/meta_programming_library/generic_visitor_library/cmake_macros_and_functions/: generic_visitor.cmake  generic_visitor_build_prerequisites.cmake
sources/meta_programming_library/generic_visitor_library/implementation_files/: BaseVisitable.cpp  DefaultCatchAll.cpp  ErrorUnknownVisitor.cpp  Visitor.cpp
sources/meta_programming_library/header_files/: AbstractFactory.hpp  AbstractFactoryUnit.hpp  BaseVisitable.hpp  BaseVisitor.h  DefaultCatchAll.hpp  DefaultFactoryError.hpp  DefineVisitableMacro.h  ErrorUnknownVisitor.h  Factory.hpp  GenerateLinearHierarchy.hpp  GenerateScatteredHierarchy.hpp  MPLAliases.hpp  OpNewFactoryUnit.hpp  RegisterObjectFactories.hpp  Type2Type.hpp
sources/meta_programming_library/implementation_files/: EmptyList.cpp  Factory.cpp  GenerateLinearHierarchy.cpp  NullType.cpp  RegisterObjectFactories.cpp  Type2Type.cpp
sources/meta_programming_library/primitives/: CMakeLists.txt
sources/meta_programming_library/primitives/cmake_macros_and_functions/: primitives.cmake  primitives_build_prerequisites.cmake
sources/meta_programming_library/primitives/implementation_files/: EmptyType.cpp  NullType.cpp
sources/meta_programming_library/typelist_aliases/: CMakeLists.txt
sources/meta_programming_library/typelist_aliases/cmake_macros_and_functions/: typelist_aliases.cmake  typelist_aliases_build_prerequisites.cmake
sources/meta_programming_library/typelist_aliases/header_files/: MPLAliases.hpp
(+67 files in other folders)
